# trainlytics

./: .pre-commit-config.yaml  01_eda.ipynb  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  metadata.yaml  ro-crate-metadata.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
OneDrive/Documents/Projetos/Workout Insights and Planner/docs/: recommendations.csv  weekly_metrics.csv
OneDrive/Documents/Projetos/Workout Insights and Planner/notebooks/: 01_eda.ipynb
OneDrive/Documents/Projetos/projeto Gym/: README.md  SECURITY.md  bootstrap.ps1  bootstrap.sh  cookiecutter.json  pyproject.toml
OneDrive/Documents/Projetos/projeto Gym/.github/workflows/: ci.yml
OneDrive/Documents/Projetos/projeto Gym/docs/: CHANGELOG.md
OneDrive/Documents/Projetos/projeto Gym/notebooks/: 02_model.ipynb  03_report.ipynb
OneDrive/Documents/Projetos/projeto Gym/src/trainlytics/: __init__.py  features.py  ingest.py
OneDrive/Documents/Projetos/projeto Gym/src/workout_insights/: __init__.py  clean.py  features.py  ingest.py  model.py  recommender.py
OneDrive/Documents/Projetos/projeto Gym/tests/: test_ingest.py
data/: sample_workout_log.csv
docs/: README.md  index.md  references.md
notebooks/: 03_report.ipynb
notebooks/examples/: README.md
notebooks/examples/.ipynb_checkpoints/: 01_eda-checkpoint.ipynb
src/trainlytics/: clean.py  recommender.py
src/trainlytics/.ipynb_checkpoints/: model-checkpoint.py
tests/: test_clean.py  test_features.py  test_model.py  test_recommender.py
